--- a/accounts/templates/registration/edit.html
+++ b/accounts/templates/registration/edit.html
@@ -42,7 +42,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="pagesDropdown">
                     <h6 class="dropdown-header">การจัดการงาน:</h6>
-                    <a class="dropdown-item" href="#">บันทึกการปฏิบัติงาน</a>
+                    <a class="dropdown-item" href="{% url 'work' %}">บันทึกการปฏิบัติงาน</a>
                     <a class="dropdown-item" href="#">การร้องขอ</a>
                     <a class="dropdown-item" href="#">คลัง</a>
                     <a class="dropdown-item" href="#">แจ้งซ่อม</a>
