--- a/works/templates/works/work_update.html
+++ b/works/templates/works/work_update.html
@@ -139,14 +139,14 @@
                   <a href="{% url 'home' %}">หน้าหลัก</a>
                 </li>
                 <li class="breadcrumb-item">
-                  <a href="{% url 'home' %}">ประชาสัมพันธ์_สั่งการ</a>
+                  <a href="{% url 'work' %}">บันทึกการปฏิบัติงาน</a>
                 </li>
-                <li class="breadcrumb-item active">แก้ไขประชาสัมพันธ์/สั่งการ</li>
+                <li class="breadcrumb-item active">แก้ไขบันทึกการปฏิบัติงาน</li>
 
               </ol>
 
-              <h1>เพิ่มประชาสัมพันธ์/สั่งการ</h1>
-              <a href="{% url 'home' %}"><span class="btn btn-dark">กลับ</span></a>
+              <h1>แก้ไขบันทึกการปฏิบัติงาน</h1>
+              <a href="{% url 'work' %}"><span class="btn btn-dark">กลับ</span></a>
 
               <br/><hr>
               <div class="form-group">
