--- a/works/templates/works/work.html
+++ b/works/templates/works/work.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 
-{% block title %}Telecomm Division Manager{% endblock %}
+{% block title %}บันทึกการปฏิบัติงาน{% endblock %}
 
 {% block links %}
   <!-- Custom styles for this template-->
@@ -119,7 +119,7 @@
           <li class="breadcrumb-item">
             <a href="{% url 'home' %}">หน้าหลัก</a>
           </li>
-          <li class="breadcrumb-item active">ประชาสัมพันธ์</li>
+          <li class="breadcrumb-item active">บันทึกการปฏิบัติงาน</li>
         </ol>
 
         <!-- Icon Cards-->
@@ -128,9 +128,9 @@
             <div class="card text-white bg-primary o-hidden h-100">
               <div class="card-body">
                 <div class="card-body-icon">
-                  <i class="fas fa-fw fa-bullhorn"></i>
+                  <i class="fas fa-fw fa-signal"></i>
                 </div>
-                <div class="mr-5">การร้องขอ!</div>
+                <div class="mr-5">งานดาต้า</div>
               </div>
               <a class="card-footer text-white clearfix small z-1" href="#">
                 <span class="float-left">รายละเอียด</span>
@@ -145,9 +145,9 @@
             <div class="card text-white bg-secondary o-hidden h-100">
               <div class="card-body">
                 <div class="card-body-icon">
-                  <i class="fas fa-fw fa-location-arrow"></i>
+                  <i class="fas fa-fw fa-network-wired"></i>
                 </div>
-                <div class="mr-5">วงรอบ!</div>
+                <div class="mr-5">งานล้ิงค์</div>
               </div>
               <a class="card-footer text-white clearfix small z-1" href="#">
                 <span class="float-left">รายละเอียด</span>
@@ -162,9 +162,9 @@
             <div class="card text-white bg-success o-hidden h-100">
               <div class="card-body">
                 <div class="card-body-icon">
-                  <i class="fas fa-fw fa-car"></i>
+                  <i class="fas fa-fw fa-satellite"></i>
                 </div>
-                <div class="mr-5">การใช้งานยานพาหนะ!</div>
+                <div class="mr-5">งานดาวเทียม</div>
               </div>
               <a class="card-footer text-white clearfix small z-1" href="#">
                 <span class="float-left">View Details</span>
@@ -179,9 +179,9 @@
             <div class="card text-white bg-danger o-hidden h-100">
               <div class="card-body">
                 <div class="card-body-icon">
-                  <i class="fas fa-fw fa-wrench"></i>
+                  <i class="fas fa-fw fa-file"></i>
                 </div>
-                <div class="mr-5">การแจ้งเสีย!</div>
+                <div class="mr-5">งานเอกสาร</div>
               </div>
               <a class="card-footer text-white clearfix small z-1" href="#">
                 <span class="float-left">View Details</span>
@@ -200,10 +200,10 @@
         <!-- DataTables Example -->
         <div class="card mb-3">
           <div class="card-header">
-            <i class="fas fa-exclamation-triangle"></i>
-            ประชาสัมพันธ์/สั่งการ
+            <i class="fas fa-tasks"></i>
+            บันทึกการปฏิบัติงาน ของ {{ user.rank }} {{ user.first_name }} {{ user.last_name }}
             
-              <a href="{% url 'add_news' %}" class="btn btn-primary float-right">เพิ่ม</a>
+              <a href="{% url 'work_add' %}" class="btn btn-primary float-right">เพิ่ม</a>
             
           </div>
           <div class="card-body">
@@ -230,17 +230,20 @@
                   </tr>
                 </tfoot>
                 <tbody>
-                {% for news in object_list %}
                 
+                {% for work in object_list %}
+                {% if user.id == work.worker.id %}
                   <tr>
-                    <td>{{ news.type }}</td>
-                    <td>{{ news.date_published|thaidate }}</td>
-                    <td>{{ news.name|slice:":30" }}</td>
-                    <td>{{ news.detail|slice:":20"|safe }}</td>
-                    <td>{{ news.author.first_name }}</td>
-                    <td><a href="{% url 'news_detail' news.pk %}" class="btn btn-info">ข้อมูล</a></td>
+                    <td>{{ work.type }}</td>
+                    <td>{{ work.work_date|thaidate }}</td>
+                    <td>{{ work.name|slice:":30" }}</td>
+                    <td>{{ work.detail|slice:":20"|safe }}</td>
+                    <td>{{ work.worker.first_name }}</td>
+                    <td><a href="{% url 'work_detail' work.pk %}" class="btn btn-info">ข้อมูล</a></td>
                   </tr>
+                  {% endif %}
                   {% endfor %}
+                
                 </tbody>
               </table>
             </div>
