--- a/works/templates/works/work_add.html
+++ b/works/templates/works/work_add.html
@@ -38,7 +38,6 @@
     <div class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
       <small class="text text-white">{{ user.rank }} {{ user.first_name }} {{ user.last_name }}</small>
     </div>
-
     <!-- Navbar -->
     <ul class="navbar-nav ml-auto ml-md-0">
       <li class="nav-item dropdown no-arrow mx-1">
@@ -116,14 +115,12 @@
       <li class="nav-item">
         <a class="nav-link" href="#">
           <i class="fas fa-fw fa-chart-area"></i>
-          <span>สรุุปงาน</span>
-        </a>
+          <span>สรุุปงาน</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'employee' %}">
           <i class="fas fa-fw fa-table"></i>
-          <span>รายชื่อกำลังพล</span>
-        </a>
+          <span>รายชื่อกำลังพล</span></a>
       </li>
     </ul>
 
@@ -133,37 +130,31 @@
 
         <!-- Breadcrumbs-->
         {% if user.is_authenticated %}
-          {% if  user.id == news.author.id %}
-              <ol class="breadcrumb">
-                <li class="breadcrumb-item">
-                  <a href="{% url 'home' %}">หน้าหลัก</a>
-                </li>
-                <li class="breadcrumb-item">
-                  <a href="{% url 'home' %}">ประชาสัมพันธ์_สั่งการ</a>
-                </li>
-                <li class="breadcrumb-item active">แก้ไขประชาสัมพันธ์/สั่งการ</li>
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+              <a href="{% url 'home' %}">หน้าหลัก</a>
+            </li>
+            <li class="breadcrumb-item">
+              <a href="{% url 'work' %}">บันทึกการปฏิบัติงาน</a>
+            </li>
+            <li class="breadcrumb-item active">เพิ่มบันทึกการปฏิบัติงาน</li>
 
-              </ol>
+          </ol>
 
-              <h1>เพิ่มประชาสัมพันธ์/สั่งการ</h1>
-              <a href="{% url 'home' %}"><span class="btn btn-dark">กลับ</span></a>
+          <h1>เพิ่มบันทึกการปฏิบัติงาน</h1>
+          <a href="{% url 'work' %}"><span class="btn btn-dark">กลับ</span></a>
 
-              <br/><hr>
-              <div class="form-group">
-                <form method="POST">
-                  {% csrf_token %}
-                  {{ form|crispy }}
+          <br/><hr>
+          <div class="form-group">
+            <form method="POST">
+              {% csrf_token %}
+              
+              {{ form|crispy }}
 
-                        <br/><br/>
-                  <button class="btn btn-primary">แก้ไข</button>
-                </form>
-              </div>  
-          {% else %}      
-            คุณไม่มีสิทธิ์ในการแก้ไข
-            <br/><hr>
-            <a href="{% url 'home' %}"><span class="btn btn-dark">กลับ</span></a>
-            <br/><br/>
-          {% endif %}
+              <br/><br/>
+              <button class="btn btn-primary">เพิ่ม</button>
+            </form>
+	        </div>
         {% else %}
           <div>
             คุณยังไม่ได้เข้าสู่ระบบ
@@ -172,24 +163,14 @@
             <a class="btn btn-info" href="{% url 'register' %}">ลงทะเบียน</a>
             <br/>
           </div>
-        {% endif %}        
-          
-        <div class="card-footer">
-          <span class="small text-muted text-left">ประสานการปฏิบัติ กทข.ศทส.สส. โทร 95525</span>
- 
-        </div>
-
+        {% endif %}                
+        <div class="card-footer small text-muted text-center">ประสานการปฏิบัติ 95525 </div>
+      </div>
     </div>
-      <!-- /.container-fluid -->
 
-      <!-- Sticky Footer -->
-      
 
   </div>
-    <!-- /.content-wrapper -->
 
-</div>
-  <!-- /#wrapper -->
 
   <!-- Scroll to Top Button-->
   <a class="scroll-to-top rounded" href="#page-top">
@@ -215,7 +196,11 @@
     </div>
   </div>
 
+  
 
-
+  <script>
+    var name = "{{ user.id }}";
+    document.getElementById("first_name").value = name;
+  </script>
 </body>
 {% endblock %}
